source/_patterns/03-organisms/sections/drawer/_drawer.scss
.jcc-drawer {
  @include u-position("fixed");
  @include u-bottom(0);
  @include u-width("full");
  @include u-padding-y(0);
  z-index: z("top");
  transition: opacity 1s;

  @include at-media("desktop") {
    @include u-position("sticky");
    @include u-width("auto");
    @include u-padding-y(4);
    bottom: units(2.5);
  }

  @include at-media("desktop-lg") {
    padding: 0 units(2.5);
  }

  // Visibility controlled by js on scroll.
  &:not([visible]) {
    opacity: 0;
  }

  &[visible] {
    opacity: 1;
  }

  // Space and wrap drawer items gracefully.
  &__inner {
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
    @include u-flex("justify-start");
    @include at-media("desktop") {
      @include u-flex("justify-end");
    }
    margin: 0 -#{units(1)};

    @include at-media("desktop") {
      > * {
        margin: units(2.5) units(1);
      }

      > div {
        @include u-position("relative");
        @include u-bottom(2);
      }
    }

    .jcc-feedback,
    .block {
      @include grid-col(6);
      @include at-media("desktop") {
        @include grid-col(auto);
      }
      // When feedback component is embedded within a block
      .jcc-feedback {
        @include grid-col(auto);
      }

      & > div {
        button {
          @include u-width("full", !important);
        }
      }
    }

    .block--single {
      @extend .jcc-drawer__inner;
      @include u-width("full");
    }

    // BEGIN Chat button plus third party adjustments
    .jcc-chat {
      @extend .jcc-feedback;
    }

    .jcc-chat__trigger-container {
      @extend .jcc-feedback__trigger-container;

      button {
        @include u-border-left(1px);
        border-color: #6d8aac;
        @include at-media("tablet-lg") {
          @include u-border(0);
        }
      }

      .icon-chat {
        @extend .icon-like-dislike;
        @include u-width(4, !important);
      }
    }
  }

  // Don't obscure content with invisible div.
  @include at-media(desktop-lg) {
    height: 0;

    .jcc-drawer__inner {
      height: 0;

      > * {
        transform: translateY(calc(-100% - #{units(2.5)}));
      }
    }
  }
}

